--- a/styles.css
+++ b/styles.css
@@ -5,34 +5,32 @@
     line-height: 1;
 }
 
-body {
+
+body { 
     font-family: Arial, Helvetica, sans-serif;
-    color: #072761;
+
 }
 
 .container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: minmax(300px, auto);
-
-    background-color: hotpink;
 }
 
 .SECTION-APP {
     grid-column: 2/3;
     grid-row: 1;
 
-    background-color: white;
+    background-color: #454761;
     line-height: 1.5px;
 
-    border: 1px solid black;
+
     border-radius: .5em;
 
-    padding: 20px;
     margin: 20px;
 
-    width: 100%;
-    max-width: 400px;
+    width: 120%;
+    max-width: 500px;
 
     display: flex;
     flex-flow: column;
@@ -40,12 +38,7 @@ body {
 
 .HEADER-APP,
 .ARTICLE-APP {
-    
-
     padding: 20px;
-    margin: 10px;
-
-    border: 3px solid black;
 }
 
 .ARTICLE-APP {
@@ -53,21 +46,66 @@ body {
     justify-items: center;
     flex-flow: column;
 
+    background-color: #ececec;
+
+    border-radius: 1em 1em 0 0;
+}
+
+.SECTION-APP--ELEMENT {
+    margin: 10px;
 
 }
+
+.label--element {
+    color: rgb(141, 141, 141);
+    font-size: .8em;
+}
+
+.data--element {
+    font-size: 1.4em;
+}
+
+#city-search {
+    border: none;
+    border-right: none;
+    height: 30px;
+    background: none;
+    color: white;
+
+    padding-left: 20px;
+}
+
+#city-search:focus {
+    border: 1px solid black;
+    border-radius: 2em;
+    padding: 4px;
+    height: 30px;
+}
+
+#send {
+    width: 40px;
+    height: 36px;
+
+    background: none;
+    text-align: center;
+    color: #fff;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+    font-size: 20px;
+}
+  
 
 #weather-condition--block,
 #temperature--block,
 #city-name--block,
 #min-max-temp--block,
 #humid-feel--block,
-#sun-time--block {
-
-    padding: .5em;
+#sun-time--block,
+#current-time--block {
+    margin: 2px;
     display: flex;
     justify-content: center;
 
-    /*border: 3px solid black;*/
 }
 
 
@@ -79,8 +117,10 @@ body {
     color: dimgrey;
 }
 
-#min-temp,
-#max-temp {
-    margin: 6px;
-    padding: 2px;
+
+#current-time--block {
+    font-size: .8em;
+
+    /*border: 3px solid black;*/
 }
+
