--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,10 +13,10 @@
   max-width: 900px;
 }
 
+
 .input-wrapper,
 .header-header {
   padding: 20px;
-
 }
 
 .input-wrapper{
@@ -36,34 +36,76 @@
   text-align: center;
 }
 
-/*
-.main {
-
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+  text-align: center;
 }
 
-.section-main-header {
 
+.main {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+.section-main-city-name,
+.section-main-temp,
+.section-header {
+  margin: 10px;
+  padding: 10px;
+
+  text-align: center;
+}
+
+
+.section-main-header {
+  padding: 20px;
+  /*border: 2px solid blue;*/
 }
 
 .section-main {
+  display: flex;
+  justify-content: space-around;
+  margin: 20px 0;
+ /* border: 2px solid blue;*/
 
 }
 
-.section-card-temp {
-
+.section-main-temp {
+  
+  /*border: 2px solid red;*/
 }
 
-.section-card-city-name {
+.section-main-temp h2 {
+  font-size: 4em;
+}
 
+.section-main-city-name {
+ /*border: 2px solid green;*/
 }
 
 .section-header {
-
+  /*border: 2px solid yellow;*/
 }
 
 .section-card {
+  display: flex;
+  justify-items: space-around;
+  
+  margin: 20px 20px;
+  padding: 20px;
+  /*border: 2px solid yellow;*/
+  border-radius: 10px;
 
 }
+
+
+/*
+
+
 
 h1 {
 
@@ -80,8 +122,8 @@ h3 {
 h4 {
 
 }
-*/
 
+*/
 
 
 
